Android Framework Base: DE translation
PS1: w -> wischen
PS2: Smartphone -> Telefon

Change-Id: I85a023035410a81435a3045a906a96d04c0b148d
Signed-off-by: Matthias Freund <matthias88freund@gmail.com>

--- a/core/res/res/values-de/pa_strings.xml
+++ b/core/res/res/values-de/pa_strings.xml
@@ -29,10 +29,10 @@
 
     <!-- Reboot confirmation dialog title -->
     <string name="reboot_system" product="tablet">Tablet neustarten</string>
-    <string name="reboot_system" product="default">Smartphone neustarten</string>
+    <string name="reboot_system" product="default">Telefon neustarten</string>
     <!-- Reboot confirmation dialog.  This is the message shown to the user when he chooses to reboot the device -->
     <string name="reboot_confirm" product="tablet">Tablet wird neugestartet.</string>
-    <string name="reboot_confirm" product="default">Smartphone wird neugestartet.</string>
+    <string name="reboot_confirm" product="default">Telefon wird neugestartet.</string>
 
     <!-- Reboot progress dialog. This is shown if the user chooses to reboot the device. -->
     <string name="reboot_progress">Neustarten\u2026</string>
