--- a/core/res/res/values/pa_symbols.xml
+++ b/core/res/res/values/pa_symbols.xml
@@ -20,6 +20,7 @@
   <java-symbol type="array" name="shutdown_reboot_options" />
   <java-symbol type="array" name="shutdown_reboot_actions" />
   <java-symbol type="array" name="shutdown_reboot_icons" />
+  <java-symbol type="drawable" name="ic_lock_profile" />
   <java-symbol type="drawable" name="ic_lock_reboot" />
   <java-symbol type="drawable" name="ic_lock_reboot_recovery" />
   <java-symbol type="drawable" name="ic_lock_reboot_bootloader" />
@@ -28,6 +29,7 @@
   <java-symbol type="string" name="global_actions" />
   <java-symbol type="string" name="global_action_reboot" />
   <java-symbol type="string" name="global_action_screenshot" />
+  <java-symbol type="string" name="global_action_choose_profile" />
   <java-symbol type="string" name="reboot_confirm" />
   <java-symbol type="string" name="reboot_progress" />
 
@@ -48,4 +50,10 @@
   <java-symbol type="string" name="safe_headset_warning_title" />
   <java-symbol type="string" name="safe_headset_warning_message" />
   <java-symbol type="drawable" name="safe_headset_volume_warning" />
+
+  <!--Profiles-->
+  <java-symbol type="string" name="profile_none" />
+  <java-symbol type="string" name="profile_picker_title" />
+  <java-symbol type="string" name="wildcardProfile" />
+  <java-symbol type="xml" name="profile_default" />
 </resources>
