--- a/packages/SystemUI/res/values/pa_strings.xml
+++ b/packages/SystemUI/res/values/pa_strings.xml
@@ -73,5 +73,5 @@
     <string name="quick_settings_location_mode_sensors_label">Device</string>
     <!-- On-the-spot preferences -->
     <string name="quick_settings_quick_pull_down">@string/quick_settings_quick_pull_down_title</string>
-    <string name="safe_headset_volume">@android:string/safe_headset_warning_title</string>
+    <string name="safe_headset_volume">@*android:string/safe_headset_warning_title</string>
 </resources>
