Add clear all recents button to in-the-spot user preference
Change-Id: I53c7d5f881542d2644aac8cc09e49ae1c5543bcb

--- a/packages/SystemUI/res/values-es/pa_strings.xml
+++ b/packages/SystemUI/res/values-es/pa_strings.xml
@@ -21,6 +21,8 @@
     <string name="screenshot_delete_confirmation">Captura de pantalla eliminada</string>
     <string name="quick_settings_quick_pull_down_title">Despliegue rápido</string>
     <string name="quick_settings_quick_pull_down_message">¿Le gustaría que el borde de la barra de notificaciones despliegue el panel de ajustes rápidos?</string>
+    <string name="quick_settings_clear_all_title">Limpiar recientes</string>
+    <string name="quick_settings_clear_all_message">¿Le gustaría que el "boton recientes" limpie todas las aplicaciones?</string>
     <string name="quick_settings_battery_charging">Cargando</string>
     <string name="quick_settings_battery_discharging">Descargando</string>
     <string name="quick_settings_immersive_global_on_label">Inmersión</string>
