--- a/core/res/res/values-de/pa_strings.xml
+++ b/core/res/res/values-de/pa_strings.xml
@@ -38,12 +38,30 @@
     <string name="reboot_progress">Neustarten\u2026</string>
 
     <!-- Label for item that screenshots in device options dialog -->
-    <string name="global_action_screenshot">Screenshot</string>
+    <string name="global_action_screenshot">Bildschirmfoto</string>
 
+    <!-- label for screen record item in phone options dialog -->
+    <string name="global_action_screen_record">Bildschirm aufnehmen</string>
+
+    <string name="permlab_interceptSmsSent">Versenden einer SMS unterbrechen</string>
+    <!-- Description of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permdesc_interceptSmsSent">Erlaubt der App
+        den Versand einer SMS zu unterbrechen.
+        Schädliche Apps könnten dies benutzen um den Versand von SMS zu verhindern.</string>
     <!-- Setting confirmation dialog strings. Shown when any UI interaction can be modified by user input -->
     <string name="setting_confirmation_ask_me_later">Später nachfragen</string>
     <string name="setting_confirmation_yes">Ja</string>
     <string name="setting_confirmation_no">Nein</string>
+
     <!-- Immersive mode confirmation: Pick confirmation window from bottom when status bar is visible -->
-    <string name="immersive_mode_confirmation_bottom">Von Unten nach Oben wischen um Vollbild zu beenden.</string>
+    <string name="immersive_mode_confirmation_bottom">Von unten nach oben wischen um Vollbild zu beenden.</string>
+
+    <!-- Title of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permlab_recordScreen">Bildschirmaktivität aufnehmen</string>
+    <!-- Description of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permdesc_recordScreen">Erlaubt der App den Bildschirm des Benutzers aufzunehmen.</string>
+
+    <!-- Safe headset volume warning dialog -->
+    <string name="safe_headset_warning_title">Sichere Kopfhörer Lautstärke</string>
+    <string name="safe_headset_warning_message">Willst du die empfohlene Warnung vor zu hoher Lautstärke ausschalten?</string>
 </resources>
