frameworks: PIE (nougat)
Pie is an alternative navigation and system info interface. It replaces the
standard navbar/statusbar with a navigation arc decorated with statusbar info.

Key contributors:
Signed-off-by: Carlo Savignano <stevewatersy@gmail.com>
Signed-off-by: Jesus David <jesdga95@gmail.com>
Signed-off-by: Curtis Mayers <curtis.mayers@gmail.com>
Signed-off-by: David L.-W. <david.leppla.weber@gmail.com>
Signed-off-by: Paul Henschel <drcmda@gmail.com>
Signed-off-by: Alexis Rico <sferadev@gmail.com>
Signed-off-by: Anas Karbila <anaskarbila@gmail.com>
Signed-off-by: Oliver Reiche <oliverreiche@aospa.co>

Change-Id: I99ec161c48c2a871e140b943bdcd7847f594fffe

--- a/packages/SystemUI/res/xml/tuner_prefs.xml
+++ b/packages/SystemUI/res/xml/tuner_prefs.xml
@@ -18,6 +18,12 @@
     xmlns:sysui="http://schemas.android.com/apk/res-auto"
     android:title="@string/system_ui_tuner">
 
+    <SwitchPreference
+        android:key="enable_pie"
+        android:title="@string/enable_pie"
+        android:summary="@string/enable_pie_summary"
+        android:persistent="false" />
+
     <PreferenceScreen
         android:key="status_bar"
         android:title="@string/status_bar" >
