--- a/packages/SystemUI/res/values/config.xml
+++ b/packages/SystemUI/res/values/config.xml
@@ -264,5 +264,18 @@
 
     <bool name="quick_settings_show_full_alarm">false</bool>
 
-</resources>
+    <!-- Enable Pie relocation to either stick to a physical side or default to the right side -->
+    <bool name="config_relocatePieOnRotation">false</bool>
 
+    <!-- Enable force pie centered -->
+    <bool name="config_forcePieCentered">true</bool>
+
+    <!-- Sensivity of pie gestures controls.
+         Must be minimum 1 and maximum 10 (See @EdgeServiceConstants.java).
+         Default for pie is high sensivity -->
+    <integer name="pie_gesture_sensivity">10</integer>
+
+    <!-- Indicates wether device is a tablet or not -->
+    <bool name="config_isTablet">false</bool>
+
+</resources>
