--- a/packages/SystemUI/res/layout/status_bar_recent_panel.xml
+++ b/packages/SystemUI/res/layout/status_bar_recent_panel.xml
@@ -2,7 +2,7 @@
 <!--
 /* apps/common/assets/default/default/skins/StatusBar.xml
 **
-** Copyright 2010, The Android Open Source Project
+** Copyright 2006, The Android Open Source Project
 **
 ** Licensed under the Apache License, Version 2.0 (the "License");
 ** you may not use this file except in compliance with the License.
@@ -18,87 +18,121 @@
 */
 -->
 
-<com.android.systemui.recent.RecentsPanelView
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:systemui="http://schemas.android.com/apk/res/com.android.systemui"
-    android:id="@+id/recents_root"
     android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    android:foreground="@drawable/bg_protect"
-    systemui:recentItemLayout="@layout/status_bar_recent_item"
-    >
-    <FrameLayout
-        android:id="@+id/recents_bg_protect"
-        android:background="@drawable/status_bar_recents_background"
+    android:layout_width="wrap_content"
+    android:paddingRight="@dimen/status_bar_recents_item_padding"
+    android:paddingLeft="@dimen/status_bar_recents_item_padding">
+
+    <view class="com.android.systemui.recent.LinearColorBar"
+        android:id="@+id/ram_usage_bar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerVertical="true">
-        
-        <ImageView
-           android:gravity="center"
-           android:layout_width="match_parent"
-           android:layout_height="match_parent"
-           android:layout_marginTop="0.0dip"
-           android:src="@drawable/status_bar_recents_background" 
-          />
-        
-        <com.android.systemui.recent.RecentsHorizontalScrollView
-          android:id="@+id/recents_container"
-          android:layout_gravity="bottom|left|center"
-          android:scrollbars="none"
-          android:fadingEdge="none"
-          android:fadingEdgeLength="0.0dip"
-          android:clipChildren="false"
-          android:clipToPadding="false"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:layout_marginRight="0.0dip"
-          android:stackFromBottom="true"
-          android:divider="@null">
-
-             <LinearLayout android:id="@+id/recents_linear_layout"
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                 android:clipToPadding="false"
-                 android:clipChildren="false">
-             </LinearLayout>
-
-        </com.android.systemui.recent.RecentsHorizontalScrollView>
-
-        <ImageView
-            android:id="@+id/recents_clear"
-            android:clickable="true"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="20dp"
-            android:scaleType="center"
-            android:layout_gravity="top|right"
-            android:src="@drawable/ic_recents_clear" />
-			
-			<HorizontalScrollView 
-            android:id="@+id/appView"
-            android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal"
+        android:clipChildren="false"
+        android:clipToPadding="false"
+        android:paddingTop="10dp"
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp"
+        android:layout_marginLeft="@*android:dimen/preference_fragment_padding_side"
+        android:layout_marginRight="@*android:dimen/preference_fragment_padding_side">
+        <TextView
+            android:id="@+id/usedMemText"
+            android:layout_width="0px"
             android:layout_height="wrap_content"
-            android:scrollbars="horizontal"
-            android:layout_gravity="bottom">
-
-        <LinearLayout
-            android:id="@+id/scrollviewin"
-            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:focusable="true"
+            android:gravity="left|bottom"
+            android:textAppearance="?android:attr/textAppearanceSmallInverse"
+            android:textColor="#000"
+            android:singleLine="true" />
+        <TextView
+            android:id="@+id/ramText"
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:focusable="true"
             android:gravity="center"
+            android:textAppearance="?android:attr/textAppearanceSmallInverse"
+            android:textColor="#000"
+            android:singleLine="true" />
+        <TextView
+            android:id="@+id/freeMemText"
+            android:layout_gravity="center_vertical|right"
+            android:layout_width="0px"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-        </LinearLayout>
+            android:layout_weight="1"
+            android:focusable="true"
+            android:gravity="right|bottom"
+            android:textAppearance="?android:attr/textAppearanceSmallInverse"
+            android:textColor="#000"
+            android:singleLine="true" />
+    </view>
 
-        </HorizontalScrollView>
-			
-    </FrameLayout>
+    <RelativeLayout android:id="@+id/recent_item"
+        android:layout_gravity="center_vertical"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:paddingTop="@*android:dimen/status_bar_height"
+        android:layout_centerInParent="true">
 
-    <include layout="@layout/status_bar_no_recent_apps"
-        android:id="@+id/recents_no_apps"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="invisible" />
 
-</com.android.systemui.recent.RecentsPanelView>
+        <FrameLayout android:id="@+id/app_thumbnail"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:background="#00000000"
+            android:foreground="#00000000"
+            android:visibility="invisible">
+            <ImageView android:id="@+id/app_thumbnail_image"
+		android:paddingTop="60dip"
+                android:layout_marginTop="30.0dip"
+                android:layout_width="212.0dip"
+                android:layout_height="455.0dip"
+                android:scaleType="centerInside" />
+        </FrameLayout>
+        
+
+        <ImageView android:id="@+id/app_icon"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:layout_marginTop="380.0dip"
+            android:maxWidth="@dimen/status_bar_recents_app_icon_max_width"
+            android:maxHeight="@dimen/status_bar_recents_app_icon_max_height"
+            android:scaleType="centerInside"
+            android:adjustViewBounds="true"
+            android:visibility="invisible" />
+		
+	<TextView android:id="@+id/app_label"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:gravity="center_horizontal"
+             android:textSize="@dimen/status_bar_recents_app_label_text_size"
+             android:fadingEdge="none"
+             android:fadingEdgeLength="0.0dip"
+             android:scrollHorizontally="true"
+             android:layout_below="@id/app_icon"
+             android:singleLine="true"
+             android:ellipsize="marquee"
+             android:textColor="@color/status_bar_recents_app_label_color" />
+
+        <TextView android:id="@+id/app_description"
+            android:layout_width="@dimen/status_bar_recents_app_label_width"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/status_bar_recents_app_description_text_size"
+            android:fadingEdge="horizontal"
+            android:fadingEdgeLength="@dimen/status_bar_recents_text_fading_edge_length"
+            android:scrollHorizontally="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="@dimen/status_bar_recents_app_label_left_margin"
+            android:layout_below="@id/app_label"
+            android:layout_marginTop="40.0dip"
+            android:singleLine="true"
+            android:ellipsize="marquee"
+            android:textAlignment="viewStart" />
+
+    </RelativeLayout>
+</FrameLayout>
