base: Hardware buttons lights integration
* Enable and improve partial AOSP disabled button brightness hooks.
* Implement user-timeout/doze/dream/awake/asleep policy.

Change-Id: Ie1fc9d1ff98e1782bdeb3afd03b03b762f39e5fc
Signed-off-by: Carlo Savignano <carlosavignano@aospa.co>

--- a/core/res/res/values/pa_symbols.xml
+++ b/core/res/res/values/pa_symbols.xml
@@ -18,4 +18,9 @@
 <resources>
   <!-- PA World Easter Egg -->
   <java-symbol type="drawable" name="pa_world_logo" />
+
+  <!-- Button Brightness -->
+  <java-symbol type="integer" name="config_buttonBrightnessSettingMinimum" />
+  <java-symbol type="integer" name="config_buttonBrightnessSettingMaximum" />
+  <java-symbol type="integer" name="config_buttonBrightnessSettingDefault" />
 </resources>
