--- a/core/res/res/values/pa_config.xml
+++ b/core/res/res/values/pa_config.xml
@@ -26,5 +26,8 @@
 
     <!-- Whether to dim the FOD icon -->
     <bool name="config_fodIconDim">false</bool>
-    
+
+    <!-- Device keyhandlers -->
+    <java-symbol type="array" name="config_deviceKeyHandlerLibs" />
+    <java-symbol type="array" name="config_deviceKeyHandlerClasses" />
 </resources>
