--- a/core/res/res/values/pa_symbols.xml
+++ b/core/res/res/values/pa_symbols.xml
@@ -26,4 +26,13 @@
     <!-- Whether to dim the FOD icon -->
     <java-symbol type="bool" name="config_fodIconDim" />
 
+    <!-- Paths to the libraries that contain device specific key handlers -->
+    <string-array name="config_deviceKeyHandlerLibs" translatable="false">
+    </string-array>
+
+    <!-- Names of the key handler classes -->
+    <string-array name="config_deviceKeyHandlerClasses" translatable="false">
+    </string-array>
+
+
 </resources>
