--- a/packages/SystemUI/res/values/pa_dimens.xml
+++ b/packages/SystemUI/res/values/pa_dimens.xml
@@ -63,4 +63,9 @@
     <dimen name="screenrecord_dialog_padding">18dp</dimen>
     <dimen name="screenrecord_logo_size">24dp</dimen>
 
+    <!-- Clear all notifications button -->
+    <dimen name="dismiss_all_button_elevation">10dp</dimen>
+    <dimen name="dismiss_all_button_height_width">58dp</dimen>
+    <dimen name="dismiss_all_button_margin_bottom">35dp</dimen>
+    <dimen name="dismiss_all_fab_src_size">30dp</dimen>
 </resources>
