--- a/packages/SystemUI/res/values/pa_config.xml
+++ b/packages/SystemUI/res/values/pa_config.xml
@@ -38,7 +38,7 @@
 
     <!-- Additional QS Tiles. Order should match "quick_settings_tiles_extra_default" -->
     <string name="quick_settings_tiles_extra" translatable="false">
-        caffeine,screenstabilization,screen_record
+        caffeine,screenstabilization,screen_record,dataswitch
     </string>
 
     <!-- Allow devices to use a lower screenrecording bitrate because of old hardware -->
