[DO NOT MERGE] Add a configuration to allow disabling auto-suspend
If a platform needs to control suspension explicitly, it can
set 'config_enableAutoSuspend' to false to disable auto-suspend.

Auto-suspend is enabled by default.

This is only for Q. Autosuspend is done differently in R.

Bug: 143203434
Test: Verified on desktop Automotive hardware
Change-Id: Iac17a7d753b8cd5c0259059713fae29d6e5e6fb0

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -4316,4 +4316,8 @@
     <string name="user_authentication_failed"></string>
     <string name="service_not_subscribed"></string>
     <string name="multi_conn_to_same_pdn_not_allowed"></string>
+
+    <!-- Boolean indicating that the system will use autoSuspend. If set to false, autoSuspend
+         is not used and the system will only suspend upon an explicit request. -->
+    <bool translatable="false" name="config_enableAutoSuspend">true</bool>
 </resources>
