CountryDetector: Enable detector class override for automotive
The detector class to be used by the CountryDetectorService can be set
by overlaying config_customCountryDetector in the device config.

Test: atest CountryDetectorServiceTest
Bug: 141626568
Merged-In: I158abd6397e3102d13e431ba043e8ce45061b64a
Change-Id: I158abd6397e3102d13e431ba043e8ce45061b64a
(cherry picked from commit 34147601d85517847722d12ab8fad2be48cd0d31)

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -4323,4 +4323,7 @@
     <!-- Boolean indicating that the system will use autoSuspend. If set to false, autoSuspend
          is not used and the system will only suspend upon an explicit request. -->
     <bool translatable="false" name="config_enableAutoSuspend">true</bool>
+
+    <!-- Class name of the custom country detector to be used. -->
+    <string name="config_customCountryDetector" translatable="false">com.android.server.location.ComprehensiveCountryDetector</string>
 </resources>
