--- a/packages/SystemUI/res/values/pa_strings.xml
+++ b/packages/SystemUI/res/values/pa_strings.xml
@@ -61,4 +61,10 @@
     <string name="screenrecord_start">Start</string>
     <string name="screenrecord_start_label">Start Recording?</string>
     <string name="screenrecord_taps_label">Show touches on screen</string>
+
+    <!-- App lock -->
+    <string name="applock_locked">&#160;is Locked.</string>
+    <string name="applock_fingerprint_face">, fingerprint or your face to unlock.</string>
+    <string name="applock_face">&#160;or your face to unlock.</string>
+    <string name="applock_fingerprint">&#160;or your fingerprint to unlock.</string>
 </resources>
