--- a/packages/SystemUI/res/values/pa_dimens.xml
+++ b/packages/SystemUI/res/values/pa_dimens.xml
@@ -63,4 +63,6 @@
     <dimen name="screenrecord_dialog_padding">18dp</dimen>
     <dimen name="screenrecord_logo_size">24dp</dimen>
 
+    <!-- Biometric Prompt -->
+    <dimen name="biometric_dialog_fod_margin">44dp</dimen>
 </resources>
