SystemUI: BiometricPrompt: Adjust layout if FOD is present
* Devices can override "biometric_dialog_fod_margin" if the default value(48dp) does not yield the desired outcome.

Signed-off-by: rituj <ritujbeniwal@gmail.com>
Change-Id: I0b68b1ee6c5a8031deb195fbdb0b23c33b0ab590

--- a/packages/SystemUI/res/values/pa_dimens.xml
+++ b/packages/SystemUI/res/values/pa_dimens.xml
@@ -65,4 +65,7 @@
 
     <!-- App lock -->
     <dimen name="applock_icon_dimension">54dp</dimen>
+
+    <!-- Biometric Prompt -->
+    <dimen name="biometric_dialog_fod_margin">48dp</dimen>
 </resources>
