FODCircleView: Dim FOD icon
Change-Id: Ic8bb03ae2af68c877f41510068f3d9e307193384
Signed-off-by: baalajimaestro <me@baalajimaestro.me>

--- a/core/res/res/values/pa_config.xml
+++ b/core/res/res/values/pa_config.xml
@@ -24,4 +24,7 @@
     <string-array name="config_vendorPlatformSignatures">
     </string-array>
 
+    <!-- Whether to dim the FOD icon -->
+    <bool name="config_fodIconDim">false</bool>
+    
 </resources>
