--- a/core/res/res/values/pa_symbols.xml
+++ b/core/res/res/values/pa_symbols.xml
@@ -23,4 +23,7 @@
          platform signatures, specifically for use on devices with a vendor partition. -->
     <java-symbol type="array" name="config_vendorPlatformSignatures" />
 
+    <!-- Whether to dim the FOD icon -->
+    <java-symbol type="bool" name="config_fodIconDim" />
+
 </resources>
